// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortIcon should render a Down icon if order is desc 1`] = `
<styled.a
  order="desc"
>
  <Themed(Styled(Down))
    order="desc"
  />
</styled.a>
`;

exports[`SortIcon should render a Down icon if order is undefined 1`] = `
<styled.a>
  <Themed(Styled(Down)) />
</styled.a>
`;

exports[`SortIcon should render an Up icon if order is asc 1`] = `
<styled.a
  order="asc"
>
  <Themed(Styled(Up))
    order="asc"
  />
</styled.a>
`;
